Quiet java WARNINGS about illegal access